# council-dashboard

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/council_dashboard/: __init__.py  api.py  config.py  councils.py  ingest.py  node_sources.py  performance.py  supervisor.py  topology.py
backend/council_dashboard/kinds/: __init__.py  ml_trainer.py
backend/council_dashboard/scaffold/: __init__.py  panels.py  provider.py  registry.py  routes.py
docs/: ARCHITECTURE.md  upstream_patch.md
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/api/: client.dart  providers.dart
frontend/lib/kinds/ml_trainer/: corpus_table_panel.dart  register.dart
frontend/lib/pages/: council_builder_page.dart  council_home_page.dart  council_run_page.dart  home_page.dart  performance_page.dart  round_page.dart  session_page.dart  sessions_page.dart
frontend/lib/scaffold/: kind_registry.dart  page_shells.dart  panel.dart
frontend/lib/widgets/: agent_graph.dart  error_view.dart  feature_chip.dart  input_bar.dart  input_node_dialog.dart  launch_config_panel.dart  node_source_dialog.dart  one_round_command_panel.dart  one_round_command_snapshot.dart  results_table.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html  manifest.json
scripts/: ingest_session.py  launch_council.py  performance_table.py  render_preview.py  render_resource.py  seed_generalization.py
