[project]
name = "council-dashboard"
version = "0.1.0"
description = "Read-side dashboard + supervisor for the agentic-docking ml-trainer council."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["council_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"
